--- a/src/widgets/navbar/ui/navbar.m.scss
+++ b/src/widgets/navbar/ui/navbar.m.scss
@@ -5,7 +5,7 @@
     display: flex;
     align-items: center;
     padding: 15px 20px;
-    justify-content: space-between;
+    justify-content: end;
 }
 
 .links {
