--- a/src/shared/ui/button/button.m.scss
+++ b/src/shared/ui/button/button.m.scss
@@ -2,7 +2,7 @@
     outline: none;
     cursor: pointer;
     padding: 10px 20px;
-    color: var(--inverted-primary-color)
+    color: var(--inverted-primary-color);
 }
 
 .standart {
