feat: добавлена модалка и кнопка войти

--- a/src/widgets/sidebar/ui/sidebar.m.scss
+++ b/src/widgets/sidebar/ui/sidebar.m.scss
@@ -6,9 +6,10 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    position: relative;
     transition: 0.2s width linear;
     padding: 20px;
+    position: sticky;
+    top: var(--navbar-height);
 }
 
 .sidebar-btn {
